Added functionality to display and buttons

--- a/index.html
+++ b/index.html
@@ -15,73 +15,73 @@
         </div>
         <div id="button-container">
             <div class="button-group">
-                <div class="button" class="operator-button">
+                <div class="button operator-button">
                     C
                 </div>
 
-                <div class="button" class="operator-button">
+                <div class="button operator-button">
                     - / +
                 </div>
-                <div class="button" class="operator-button">
+                <div class="button operator-button">
                     ?
                 </div>
-                <div class="button" class="operator-button">
+                <div class="button operator-button">
                     DEL
                 </div>
             </div>
             <div class="button-group">
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     7
                 </div>
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     8
                 </div>
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     9
                 </div>
-                <div class="button" class="operator-button">
+                <div class="button operator-button">
                     /
                 </div>
             </div>
             <div class="button-group">
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     4
                 </div>
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     5
                 </div>
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     6
                 </div>
-                <div class="button" class="operator-button">
+                <div class="button operator-button">
                     *
                 </div>
             </div>
             <div class="button-group">
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     1
                 </div>
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     2
                 </div>
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     3
                 </div>
-                <div class="button" class="operator-button">
+                <div class="button operator-button">
                     -
                 </div>
             </div>
             <div class="button-group">
-                <div class="button" class="number-button">
+                <div class="button number-button">
                     0
                 </div>
-                <div class="button" class="operator-button">
+                <div class="button number-button">
                     .
                 </div>
-                <div class="button" class="operator-button">
+                <div class="button number-button">
                     =
                 </div>
-                <div class="button" class="operator-button">
+                <div class="button operator-button">
                     +
                 </div>
             </div>
