Added a little bit of styling

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="button number-button">
                     .
                 </div>
-                <div class="button number-button">
+                <div class="button operator-button">
                     =
                 </div>
                 <div class="button operator-button">
