Fixed some major bugs

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     -/+
                 </div>
                 <div class="button operator-button">
-                    ?
+                    DEL
                 </div>
                 <div class="button operator-button">
-                    DEL
+                    /
                 </div>
             </div>
             <div class="button-group">
@@ -40,7 +40,7 @@
                     9
                 </div>
                 <div class="button operator-button">
-                    /
+                    *
                 </div>
             </div>
             <div class="button-group">
@@ -54,7 +54,7 @@
                     6
                 </div>
                 <div class="button operator-button">
-                    *
+                    -
                 </div>
             </div>
             <div class="button-group">
@@ -68,21 +68,18 @@
                     3
                 </div>
                 <div class="button operator-button">
-                    -
+                    +
                 </div>
             </div>
             <div class="button-group">
-                <div class="button number-button">
+                <div class="button number-button" id="button-zero">
                     0
                 </div>
                 <div class="button number-button">
                     .
-                </div>
+                </div>                
                 <div class="button operator-button">
                     =
-                </div>
-                <div class="button operator-button">
-                    +
                 </div>
             </div>
         </div>
