Changed background color of operator buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="button-container">
             <div class="button-group">
-                <div class="button operator-button">
+                <div class="button operator-button" id="button-c">
                     C
                 </div>
 
