Added alternative theme

--- a/index.html
+++ b/index.html
@@ -77,10 +77,20 @@
                 </div>
                 <div class="button number-button">
                     .
-                </div>                
+                </div>
                 <div class="button operator-button">
                     =
                 </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div id="footer-button-container">
+            <div id="blue-theme-button">
+                Blue theme
+            </div>
+            <div id="orange-theme-button">
+                Orange theme
             </div>
         </div>
     </div>
